Fixed some layout bugs, added night mode to radio

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -153,7 +153,7 @@ select:hover {
 }
 
 .mat-radio-outer-circle {
-  border-color: blue;
+  border-color: gray;
 }
 
 .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle {
